Working ba-dua (0.8.0)

--- a/bookkeeper-server/pom.xml
+++ b/bookkeeper-server/pom.xml
@@ -404,7 +404,6 @@
     <!-- ISW2 - Jacoco profile -->
     <profile>
       <id>jacoco</id>
-
       <build>
         <plugins>
           <!-- Execute tests -->
@@ -434,6 +433,89 @@
                 <goals>
                   <goal>report</goal>
                 </goals>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+
+    <!-- ISW2 - Ba-dua profile -->
+    <profile>
+      <id>badua</id>
+      <dependencies>
+        <dependency>
+          <groupId>br.usp.each.saeg</groupId>
+          <artifactId>ba-dua-cli</artifactId>
+          <version>0.8.0</version>
+        </dependency>
+        <dependency>
+          <groupId>br.usp.each.saeg</groupId>
+          <artifactId>ba-dua-agent-rt</artifactId>
+          <version>0.8.0</version>
+        </dependency>
+      </dependencies>
+
+      <build>
+        <plugins>
+          <!-- Copy agent from dependency -->
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-dependency-plugin</artifactId>
+            <version>2.8</version>
+            <executions>
+              <execution>
+                <goals>
+                  <goal>copy</goal>
+                </goals>
+                <configuration>
+                  <artifactItems>
+                    <artifactItem>
+                      <groupId>br.usp.each.saeg</groupId>
+                      <artifactId>ba-dua-agent-rt</artifactId>
+                      <classifier>all</classifier>
+                      <version>0.8.0</version>
+                    </artifactItem>
+                  </artifactItems>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+          <!-- Execute tests -->
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>3.0.0-M5</version>
+            <configuration>
+              <argLine>
+                -javaagent:ba-dua/dependency/ba-dua-agent-rt-0.8.0-all.jar
+                -Doutput.file=target/coverage.ser
+              </argLine>
+            </configuration>
+          </plugin>
+          <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>exec-maven-plugin</artifactId>
+            <version>1.6.0</version>
+            <executions>
+              <execution>
+                <goals>
+                  <goal>java</goal>
+                </goals>
+                <phase>test</phase>
+                <configuration>
+                  <mainClass>br.usp.each.saeg.badua.cli.Report</mainClass>
+                  <arguments>
+                    <argument>-input</argument>
+                    <argument>${project.build.directory}/coverage.ser</argument>
+                    <argument>-classes</argument>
+                    <argument>target/classes</argument>
+                    <argument>-show-classes</argument>
+                    <argument>-show-methods</argument>
+                    <argument>-xml</argument>
+                    <argument>${project.build.directory}/badua.xml</argument>
+                  </arguments>
+                </configuration>
               </execution>
             </executions>
           </plugin>
