--- a/.github/workflows/maven-flow.yml
+++ b/.github/workflows/maven-flow.yml
@@ -6,7 +6,7 @@
 # separate terms of service, privacy policy, and support
 # documentation.
 
-name: Java CI with Maven
+name: surefire_build
 
 on:
   push:
@@ -26,10 +26,13 @@ jobs:
       with:
         java-version: '17'
         distribution: 'temurin'
-        cache: maven
-    - name: Build with Maven
-      run: mvn -B package --file pom.xml
 
-    # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
-    - name: Update dependency graph
-      uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
+    - name: Build with Maven
+      run: mvn clean verify
+
+    - name: Upload Surefire reports
+      uses: actions/upload-artifact@v3
+      with:
+        name: surefire-reports
+        path: bookkeeper-server/target/surefire-reports
+        if-no-files-found: error
