--- a/.github/workflows/maven-flow.yml
+++ b/.github/workflows/maven-flow.yml
@@ -10,9 +10,9 @@ name: surefire_build
 
 on:
   push:
-    branches: [ "master" ]
+    branches: [ "isw2" ]
   pull_request:
-    branches: [ "master" ]
+    branches: [ "isw2" ]
 
 jobs:
   build:
