--- a/.github/workflows/pitest-flow.yml
+++ b/.github/workflows/pitest-flow.yml
@@ -2,9 +2,9 @@ name: pit_coverage
 
 on:
   push:
-    branches: [ "master" ]
+    branches: [ "isw2" ]
   pull_request:
-    branches: [ "master" ]
+    branches: [ "isw2" ]
 
 jobs:
   build:
