--- a/bookkeeper-server/pom.xml
+++ b/bookkeeper-server/pom.xml
@@ -320,6 +320,19 @@
           </execution>
         </executions>
       </plugin>
+
+      <!-- ISW2 -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.8.1</version>
+        <configuration>
+          <includes>
+            <include>org/apache/bookkeeper/my/</include>
+            <include>org/apache/bookkeeper/bookie/storage/ldb/ReadCache.java</include>
+          </includes>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
 
@@ -441,6 +454,7 @@
                   </targetClasses>
                   <targetTests>
                     <param>org.apache.bookkeeper.my.CalculatorTest</param>
+                    <param>org.apache.bookkeeper.bookie.storage.ldb.ReadCachePutTest</param>
                     <param>org.apache.bookkeeper.bookie.storage.ldb.ReadCacheGetTest</param>
                     <param>org.apache.bookkeeper.bookie.storage.ldb.ReadCacheHasEntryTest</param>
                   </targetTests>
@@ -460,12 +474,12 @@
         <dependency>
           <groupId>br.usp.each.saeg</groupId>
           <artifactId>ba-dua-cli</artifactId>
-          <version>0.8.0</version>
+          <version>0.6.0</version>
         </dependency>
         <dependency>
           <groupId>br.usp.each.saeg</groupId>
           <artifactId>ba-dua-agent-rt</artifactId>
-          <version>0.8.0</version>
+          <version>0.6.0</version>
         </dependency>
       </dependencies>
 
@@ -475,7 +489,7 @@
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-dependency-plugin</artifactId>
-            <version>2.8</version>
+            <version>2.10</version>
             <executions>
               <execution>
                 <goals>
@@ -487,7 +501,7 @@
                       <groupId>br.usp.each.saeg</groupId>
                       <artifactId>ba-dua-agent-rt</artifactId>
                       <classifier>all</classifier>
-                      <version>0.8.0</version>
+                      <version>0.6.0</version>
                     </artifactItem>
                   </artifactItems>
                 </configuration>
@@ -501,7 +515,7 @@
             <version>3.0.0-M5</version>
             <configuration>
               <argLine>
-                -javaagent:ba-dua/dependency/ba-dua-agent-rt-0.8.0-all.jar
+                -javaagent:ba-dua/dependency/ba-dua-agent-rt-0.6.0-all.jar
                 -Doutput.file=target/coverage.ser
               </argLine>
             </configuration>
@@ -522,7 +536,8 @@
                     <argument>-input</argument>
                     <argument>${project.build.directory}/coverage.ser</argument>
                     <argument>-classes</argument>
-                    <argument>target/classes/org/apache/bookkeeper/my</argument>
+                    <!-- <argument>target/classes/org/apache/bookkeeper/my</argument> -->
+                    <argument>target/classes/org/apache/bookkeeper/bookie/storage/ldb</argument>
                     <argument>-show-classes</argument>
                     <argument>-show-methods</argument>
                     <argument>-xml</argument>
