--- a/.github/workflows/jacoco-flow.yml
+++ b/.github/workflows/jacoco-flow.yml
@@ -13,19 +13,28 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
-      - name: Set up JDK 17
+
+      - name: Set up JDK 8
         uses: actions/setup-java@v4
         with:
-          java-version: '17'
+          java-version: '8'
           distribution: 'temurin'
+
+      # to speed up next builds
+      - name: Cache Maven packages
+        uses: actions/cache@v4
+        with:
+          path: ~/.m2
+          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+          restore-keys: ${{ runner.os }}-m2
 
       - name: Verify
         run: mvn verify
 
-      - name: Build and test
+      - name: Build and test with JaCoCo
         run: mvn clean test -P jacoco
 
-      - name: Upload report
+      - name: Upload JaCoCo report
         uses: actions/upload-artifact@v4
         with:
           name: jacoco-report
