--- a/.github/workflows/maven-flow.yml
+++ b/.github/workflows/maven-flow.yml
@@ -20,18 +20,18 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
-    - name: Set up JDK 17
-      uses: actions/setup-java@v4
+    - uses: actions/checkout@v3
+    - name: Set up JDK 1.8
+      uses: actions/setup-java@v3
       with:
-        java-version: '17'
+        java-version: 8
         distribution: 'temurin'
 
     - name: Build with Maven
       run: mvn clean verify
 
     - name: Upload Surefire reports
-      uses: actions/upload-artifact@v4
+      uses: actions/upload-artifact@v3
       with:
         name: surefire-reports
         path: bookkeeper-server/target/surefire-reports
